20180706_0000 Added UART server for control via ESp32 MQTT uart GWY
1. Change PD2 from IR_LED to UART5 and then PD7 from unused to IRLED
2. Added UART5 on PD2 & PC11 or PC12 (one of those)
3. Used y MODBUS RTU server for basic uart server, removed CRC and auto when any RX.
4. Added async transmit method that is called from anywhere within the app and sends frames. Used this to send status info periodically.
5. Did not write any parsing for received frames, yet
6. Did not test UART TXs either

--- a/MDK-ARM/Project.uvprojx
+++ b/MDK-ARM/Project.uvprojx
@@ -581,6 +581,16 @@
               <FileType>1</FileType>
               <FilePath>..\Src\tim.c</FilePath>
             </File>
+            <File>
+              <FileName>usart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\usart.c</FilePath>
+            </File>
+            <File>
+              <FileName>modbusrtu.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\modbusrtu.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
